tests/baselines/reference/contextualTyping39.errors.txt
tests/cases/compiler/contextualTyping39.ts(1,11): error TS2352: Type '() => "err"' cannot be converted to type '() => number'.
  Type '"err"' is not comparable to type 'number'.


==== tests/cases/compiler/contextualTyping39.ts (1 errors) ====
    var foo = <{ (): number; }> function() { return "err"; };
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '() => "err"' cannot be converted to type '() => number'.
!!! error TS2352:   Type '"err"' is not comparable to type 'number'.